package test;

option java_package = "com.livefyre.voom.pb";
option java_outer_classname = "test";

message TestMessage {
  optional string aString = 1;
  optional int64 anInt = 2;
  optional TestComposedMessage composed = 3;
  repeated TestComposedMessage repeatedComposed = 4;
  optional TestEnum enumMe = 5;
  
  message TestComposedMessage {
      optional string aString = 1;
  }
  
  enum TestEnum {
      VALUE = 0;
  }
}